feature_delivery_ui_changes: login UI changes

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_splash_new.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_splash_new.xml
@@ -6,8 +6,8 @@
     android:layout_height="1134px"
     android:animateLayoutChanges="true"
     android:background="@drawable/splash_new_background"
-    android:orientation="vertical"
-    android:splitMotionEvents="false">
+    android:splitMotionEvents="false" android:orientation="vertical"
+    android:baselineAligned="false">
 
     <RelativeLayout
         android:layout_width="wrap_content"
@@ -21,6 +21,18 @@
             android:background="@drawable/back_btn_selector"
             android:textColor="@drawable/blue_alpha_color_selector"
             android:textSize="@dimen/button_text_size"/>
+
+
+        <TextView
+            android:id="@+id/textViewRegDriver"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/white"
+            android:layout_marginLeft="162px"
+            android:layout_centerVertical="true"
+            android:textSize="46px"
+            android:visibility="gone"
+            android:text="@string/register_as_driver"/>
 
         <RelativeLayout
             android:id="@+id/selectLanguageLl"
@@ -74,13 +86,13 @@
         android:id="@+id/viewInitJugnoo"
         android:layout_width="match_parent"
         android:layout_height="40px"
-        android:visibility="visible"/>
+        android:visibility="gone"/>
 
     <ImageView
         android:id="@+id/viewInitSplashJugnoo"
         android:layout_width="match_parent"
         android:layout_height="200px"
-        android:visibility="visible"/>
+        android:visibility="gone"/>
 
 
     <RelativeLayout
@@ -93,7 +105,7 @@
         <ImageView
             android:id="@+id/imageViewJugnooLogo"
             android:layout_width="340px"
-            android:layout_height="270px"
+            android:layout_height="280px"
             android:layout_centerHorizontal="true"
             android:background="@drawable/jugnoo_white_logo"
             android:tag="mwar"
@@ -122,6 +134,19 @@
 
         </RelativeLayout>
 
+        <TextView
+            android:id="@+id/textViewDriver"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:layout_below="@+id/imageViewJugnooLogo"
+            android:layout_marginTop="18px"
+            android:text="@string/driver_app"
+            android:textColor="@color/white"
+            android:textSize="32px"/>
+
+
         <ProgressBar
         android:id="@+id/progressBar1"
         android:layout_width="100px"
@@ -139,14 +164,14 @@
         android:id="@+id/viewInitLS"
         android:layout_width="match_parent"
         android:layout_height="300px"
-        android:visibility="visible"/>
+        android:visibility="gone"/>
 
 
     <RelativeLayout
         android:id="@+id/relativeLayoutLS"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="144px"
+        android:layout_marginTop="186px"
         android:animateLayoutChanges="true"
         android:visibility="visible">
 
@@ -160,19 +185,6 @@
             android:splitMotionEvents="false"
             android:visibility="visible">
 
-
-            <TextView
-                android:id="@+id/textViewDriver"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
-                android:layout_centerVertical="true"
-                android:layout_toRightOf="@+id/imageViewHorizontal3"
-                android:paddingLeft="10px"
-                android:paddingRight="10px"
-                android:text="@string/driver"
-                android:textColor="@color/white"
-                android:textSize="30px"/>
 
             <Button
                 android:id="@+id/buttonLogin"
@@ -189,8 +201,8 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="54px"
-                android:layout_marginBottom="32px"
                 android:layout_marginTop="32px"
+                android:visibility="visible"
                 android:gravity="center">
 
                 <ImageView
@@ -224,15 +236,14 @@
             </RelativeLayout>
 
 
-            <Button
+            <TextView
                 android:id="@+id/buttonRegister"
-                android:layout_width="473px"
-                android:layout_height="100px"
-                android:background="@drawable/button_theme_alpha_white_stroke_selector"
-                android:text="@string/register"
-                android:textAllCaps="true"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/reg_as_driver"
                 android:textColor="@color/white"
-                android:textSize="@dimen/text_size_34"/>
+                android:layout_marginTop="32px"
+                android:textSize="32px"/>
 
             <Button
                 android:id="@+id/buttonRegisterTookan"
