--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_rate_card.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_rate_card.xml
@@ -105,7 +105,7 @@
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/textViewPickupCharges"
                     android:layout_marginTop="5px"
-                    android:text="*"
+                    android:text=""
                     android:textColor="@color/new_orange"
                     android:textSize="24px"/>
 
@@ -114,7 +114,7 @@
                     android:layout_width="410px"
                     android:layout_height="34px"
                     android:layout_marginTop="5px"
-                    android:text="@string/applicable_after"
+                    android:text="@string/NA"
                     android:textColor="@color/grey_black_light"
                     android:textSize="24px"/>
 
@@ -125,7 +125,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
-                android:text="00"
+                android:text="@string/NA"
                 android:textColor="@color/black"
                 android:textSize="34px"/>
 
@@ -202,7 +202,7 @@
                         android:layout_gravity="center_vertical"
                         android:layout_weight="1"
                         android:gravity="center"
-                        android:text="@string/distance"
+                        android:text="@string/distance_lower"
                         android:textColor="@color/black"
                         android:textSize="34px"/>
 
@@ -275,7 +275,7 @@
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
                     android:layout_marginLeft="70px"
-                    android:text="00"
+                    android:text="@string/NA"
                     android:textColor="@color/black"
                     android:textSize="34px"/>
 
@@ -285,7 +285,7 @@
                     android:layout_height="wrap_content"
                     android:layout_centerHorizontal="true"
                     android:layout_centerVertical="true"
-                    android:text="00"
+                    android:text="@string/NA"
                     android:textColor="@color/black"
                     android:textSize="34px"/>
 
@@ -297,7 +297,7 @@
                     android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
                     android:layout_marginRight="70px"
-                    android:text="00"
+                    android:text="@string/NA"
                     android:textColor="@color/black"
                     android:textSize="34px"/>
 
@@ -410,7 +410,7 @@
                     android:layout_gravity="center_vertical"
                     android:layout_weight="1"
                     android:gravity="center"
-                    android:text="00"
+                    android:text="@string/NA"
                     android:textColor="@color/black"
                     android:textSize="34px"/>
 
@@ -421,7 +421,7 @@
                     android:layout_gravity="center_vertical"
                     android:layout_weight="1"
                     android:gravity="center"
-                    android:text="00"
+                    android:text="@string/NA"
                     android:textColor="@color/black"
                     android:textSize="34px"/>
 
