--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_engaged.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_engaged.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:layout_below="@+id/topRlOuter"
     android:splitMotionEvents="false"
-    android:visibility="gone">
+    android:visibility="visible">
 
     <!-- customer info layout -->
     <RelativeLayout
@@ -36,7 +36,7 @@
                     android:text="@string/NA"
                     android:textColor="@color/white"
                     android:textSize="36px"
-                    android:layout_marginLeft="54px"
+                    android:layout_marginLeft="18px"
                     android:layout_centerVertical="true"/>
 
                 <Button
