--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_driver_request.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_driver_request.xml
@@ -139,7 +139,7 @@
                     android:text="0 km away"
                     android:layout_marginTop="6px"
                     android:textColor="@color/text_color"
-                    android:textSize="@dimen/text_size_34"
+                    android:textSize="31px"
                     />
 
             </LinearLayout>
