feature_delivery_batch: switching logic modified

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_end.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_end.xml
@@ -7,7 +7,7 @@
     android:layout_below="@+id/topRlOuter"
     android:animateLayoutChanges="true"
     android:splitMotionEvents="false"
-    android:visibility="visible">
+    android:visibility="gone">
 
 
     <ScrollView
